# ai-dev-environment

./: .env.example  .gitignore  AGENTS.md  README.md  claude.md  config.yaml  generate_docs_from_json.py  layer1_test_results.json  layer2_test_results.json  layer3_test_results.json  main.py  my_layer1_results.json  pyproject.toml  test_document_cli.sh  test_llm_direct.py  test_orchestrator.py  test_orchestrator_batch.py  test_reposcribe_documentation.py
.claude/agents/: codebase-researcher.md  greeting-responder.md  market-analyst.md  spec-simplifier-agent.md  unit-test-engineer.md  workflow-executor-agent.md
.claude/commands/: brain2specs.md  brain2stories.md  brain2validation.md  bug.md  feature.md  graph.md  implement.md  install.md  langgraph-agents-builder.md  meet2issues.md  meet2plan.md  mergebrain2specs.md  plan.md  prime.md  session2prd.md  setup.md  start.md  update_completion.md  workflow.md
.claude/hooks/: pre_tool_use.py
agents/: agent-architect.md  chart-divergence-analyzer.md  code-clarity-specialist.md  code-minimalist.md  spec-simplification-agent.md  workflow-executor-agent.md
ai-docs/0-brainstorming/: session-1.md  session-2.md  session2.md  session3.md  session4.md  session5.md  session6.md  session8.md  session9.md
ai-docs/0-meetings/: transcript7.md
ai-docs/1-prds/: prd2.md  prd3.md
ai-docs/2-diagrams/: architecture-5.md  architecture-6.mmd  workflow-5.md  workflow-6.mmd
ai-docs/2-prds/: prd5.md  prd6.md
ai-docs/2-specs/: specs-2.md  specs-4.md  specs-5.md  specs-6.md  specs-7.md  specs-8.md  specs-9.md  specs3.md  task-1-infrastructure-audit.md  task-2-directory-creation.md
ai-docs/2-user-stories/: stories-5.md  stories-6.md
ai-docs/2-validation/: validation-5.md  validation-6.md
ai-docs/2-workflows/: workflow-conventions.md  workflow-guidelines.md  workflow1.md
ai-docs/3-analysis/: task-1-0-system-prompt-infrastructure.md  task-3-0-transcript-parsing-segmentation.md  task-4-0-bug-classification-workflow.md  task-5-0-feature-classification-workflow.md  task-6-0-command-generation-logic.md  task-7-0-output-file-structure.md
ai-docs/3-resources/: sample_doc_template.txt
ai-docs/3-specs/: specs-1.md  specs-2.md  specs3-simplified.md  specs4-simplified.md  specs4.md
ai-docs/4-prds/: prd2.md  prd4.md
ai-docs/4-prompts/: brain2graph.md  (+5 more)
output/: DOCUMENTATION.md  documentation.md  layer1_summaries.json  layer2_details.json  layer3_relationships.json
(+305 files in other folders)
